p line-height and letter-spacing fixed

--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -27,5 +27,7 @@ p {
     font-size: 1.6rem;
     color: $color-secondary;
     font-weight: 400;
+    letter-spacing: 0.15rem;
     width: 65%;
+    line-height: 1.2;
 }
