--- a/sass/styles.css
+++ b/sass/styles.css
@@ -74,7 +74,9 @@ p {
   font-size: 1.6rem;
   color: rgba(0, 0, 0, 0.5);
   font-weight: 400;
+  letter-spacing: 0.15rem;
   width: 65%;
+  line-height: 1.2;
 }
 
 .card-1 {
